--- a/ucenter.html
+++ b/ucenter.html
@@ -505,5 +505,8 @@
             <h2>Copyright © 2016-2019 eurailexpert.com™  All rights reserced.</h2>
         </div>
     </div>
+    <div style="display:none;">
+        测试github
+    </div>
 </body>
 </html>
